--- a/日记/2023-12-20.md
+++ b/日记/2023-12-20.md
@@ -2,3 +2,9 @@
 
 ### Analyze an analogy
 A typical analogy in Chinese is "Difficulty is mechanical spring". In this analogy, the source domain is difficulty, and the target domain is the mechanical spring. They are similar in certain characteristics. When you push a mechanical spring with a weak force, it remains long; while if you push it with a strong force, it gets mush shorter. Difficulty is the same. If you face it with a weak mind, it could get strong easily; but if you face it bravely, it immediately weakened.
+
+今天的微积分笔记:
+[多元函数的基本概念](多元函数的基本概念.md)
+
+线性代数笔记:
+[行列式](行列式.md)
